--- a/src/budgie/SConscript
+++ b/src/budgie/SConscript
@@ -1,4 +1,5 @@
-#!/usr/bin/env python
+#!/usr/bin/env python3
+
 import BugleChecks
 
 Import('srcdir', 'envs', 'package_sources')
@@ -10,7 +11,7 @@ budgie_env.Prepend(CPPPATH = [Dir('.')])
 conf = Configure(budgie_env, custom_tests = BugleChecks.tests, config_h = 'config.h')
 if not conf.CheckLibWithHeader(None, 'regex.h', 'c++', 'regcomp(0, 0, 0);'):
     if not conf.CheckLibWithHeader('regex', 'regex.h', 'c++', 'regcomp(0, 0, 0);'):
-        print "A regex library is required"
+        print("A regex library is required")
         Exit(1)
 budgie_env = conf.Finish()
 
